# pruebaRobot

./: README.md
limo_description/urdf/: limo_four_diff.xacro  limo_omnidirectional.gazebo  limo_omnidirectional.xacro  limo_xacro.xacro
limo_gazebo/: CMakeLists.txt
limo_gazebo/launch/: limo_omnidirectional.launch
patrol_activity/: CMakeLists.txt  package.xml
patrol_activity/launch/: follow_and_patrol.launch  patrol_activity.launch
patrol_activity/scripts/: patrol_node.py  person_follow_node.py
patrol_control/: CMakeLists.txt  package.xml
patrol_control/launch/: control.launch  patrol_teleop_keyboard.launch
patrol_description/: CMakeLists.txt  package.xml
patrol_description/urdf/: empty.urdf  patrol_diff.gazebo  patrol_diff.xacro  patrol_gazebo.gazebo  patrol_xacro.xacro
patrol_gazebo/: CMakeLists.txt  package.xml
patrol_gazebo/config/: patrol_diff_control.yaml
patrol_gazebo/launch/: apartment.launch  patrol_diff.launch
patrol_gazebo/src/: dummy_cmd_vel.cpp
patrol_gazebo/urdf/: apartment.urdf.xacro  decorations.urdf.xacro  floor.urdf.xacro
patrol_navigation/: CMakeLists.txt  package.xml
patrol_navigation/launch/: patrol_move_base_diff.launch  patrol_nav.launch  patrol_navigation_amcl_diff.launch  patrol_navigation_rtabmap_diff.launch  patrol_slam.launch
patrol_navigation/rviz/: patrol_mapping.rviz  patrol_navigation.rviz
